service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dyno-code-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: dyno-code
