ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dyno-code-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dyno-code.code-valley.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dyno-code-service
                port:
                  number: 80
